--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
   </style>
 </head>
-<body>
+<body bgcolor="silver" text="orange">
 <p class="p1">ANNAPURNA VINOD</p>
 </body>
 </html>
