--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </style>
 </head>
 <body bgcolor="silver" text="orange">
-<p class="p1">ANNAPURNA VINOD</p>
+<img src="_DSC0116.jpg" alt="Girl in a jacket" width="500" height="600">
+  <p class="p1">ANNAPURNA VINOD</p>
 </body>
 </html>
