--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body bgcolor="silver" text="orange">
-<img src="https://github.com/adithyask/undampillai/blob/master/_DSC0610.JPG" alt="Girl in a jacket" width="500" height="600">
+<img src="_DSC0610.JPG" alt="UNDAMPILLAI " width="500" height="600">
   <p class="p1">ANNAPURNA VINOD</p>
 </body>
 </html>
