--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 Deducated to all bengalis and nepallies incl7ding erapalies of SCT
 </head>
 <body bgcolor="silver" text="orange">
-<img src="_DSC0610.JPG" alt="UNDAMPILLAI " width="500" height="600">
+<img src="gsu.JPG" alt="UNDAMPILLAI " width="500" height="600">
   <p class="p1">ANNAPURNA VINOD</p>
 </body>
 </html>
