--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 Deducated to all bengalis and nepallies incl7ding erapalies of SCT
 </head>
 <body bgcolor="silver" text="orange">
-<img src="gsu1.JPG" alt="UNDAMPILLAI " width="600" height="300">
+<img src="gsu.JPG" alt="UNDAMPILLAI " width="600" height="300">
   <p class="p1">ANNAPURNA VINOD</p>
 </body>
 </html>
